--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
 Flask==2.0.3
-gunicorn==20.1.0  # WSGI server for running the Flask app
+gunicorn==20.1.0
+Flask-SQLAlchemy==2.5.1  # Include this if you are using SQLAlchemy
+Flask-Migrate==3.1.0      # Include this if you are handling migrations
+Flask-CORS==3.0.10        # Include this if you need CORS support
+requests==2.26.0          # Include this if you are making HTTP requests
