--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Flask==2.0.3
-Werkzeug==2.0.3
 gunicorn==20.1.0
+Werkzeug==2.0.3
+Flask-SQLAlchemy==2.5.1  # Include if you are using SQLAlchemy
+Flask-Migrate==3.1.0      # Include if you are handling migrations
+Flask-CORS==3.0.10        # Include if you need CORS support
+requests==2.26.0          # Include if you are making HTTP requests
